@@ -42,7 +42,8 @@ my %yn_vars = map { $_ => 1 }
       moderation_requires_password enable_node_image enable_common_categories
       enable_common_locales recent_changes_on_home_page
       random_page_omits_locales random_page_omits_categories
-      content_above_navbar_in_html show_gmap_in_node_display);
+      content_above_navbar_in_html show_gmap_in_node_display
+      send_moderation_notifications);
 
 my $skip_config = Module::Build->y_n("Skip OpenGuides configuration?", "n");
 if ( $skip_config ) {
@@ -104,7 +105,7 @@ foreach my $var ( qw(
    default_gmaps_search_zoom force_wgs84 google_analytics_key
    licence_name licence_url licence_info_url moderation_requires_password
    enable_node_image enable_common_categories enable_common_locales
-   spam_detector_module static_path static_url
+   spam_detector_module static_path static_url send_moderation_notifications
   ) ) {
     my $q_method = $var . "__qu";
     my $qu  = $existing_config->$q_method;
