@@ -24,6 +24,7 @@ http://dev.openguides.org/log/trunk
           (#216).
         Move the common categories/locales navbar display decision into the
           templates (#214).
+        Add email notifications when moderated nodes are edited (#138)
 
 0.60    13 May 2007
         Removed footer search from edit page (shouldn't have been there).
